# hexapod

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  hexapod.rviz  plotjuggler.xml
.colcon/: defaults.yaml
data/: README.md
etc/sysctl.d/: ros2-dds.conf
src/app/: CMakeLists.txt  README.md  package.xml
src/app/launch/: follow_velocity_rectangle.launch.xml  walk_forward.launch.xml
src/app/notebooks/: generate_foot_trajectory.py  generate_foot_trajectory_3D.py
src/app/scripts/: move_legs  walk_sideways_while_rotating
src/app/src/: follow_velocity_rectangle.cpp  walk_forward.cpp
src/app/test/: test_in_simulation.py
src/hexapod_ik/: CMakeLists.txt  package.xml
src/hexapod_ik/include/hexapod_ik/: leg_inverse.hpp
src/hexapod_ik/src/: leg_inverse.cpp
src/hexapod_kinematics/: CMakeLists.txt  README.md  package.xml
src/hexapod_kinematics/include/hexapod_kinematics/: kinematics.hpp
src/hexapod_kinematics/src/: example.cpp  kinematics.cpp
src/hexapod_kinematics/test/: robot_description.urdf  test_kinematics.cpp
src/hexapod_msgs/: CMakeLists.txt  README.md  package.xml
src/hexapod_msgs/msg/: GaitPhase.msg  Vector3Array.msg
src/robot_description/: CMakeLists.txt  README.md  hexapod.urdf.xacro  package.xml  properties.urdf.xacro  robot_description.launch.py
src/simulation/: CMakeLists.txt  README.md  package.xml
src/simulation/config/: bridge.yaml
src/simulation/hooks/: simulation.dsv.in
src/simulation/launch/: gz_sim.launch.py.in  simulator.launch.xml
src/simulation/worlds/: empty_world.sdf
