<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hexapod_ik</name>
  <version>0.0.0</version>
  <description>Inverse kinematics for hexapod</description>
  <maintainer email="mail@arnebaeyens.com">Arne Baeyens</maintainer>
  <author email="mail@arnebaeyens.com">Arne Baeyens</author>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>kdl_parser</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
